style: CHANGE Styles

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="title">
             <h1>James Edward Nuñez Cuzcano</h1>
             <h2>CFGS Desarrollo de Aplicaciones Web 2025/2026</h2>
         </div>
-        <button class="home active"><img src="./webresources/home.png"></button>
-    </div>
+    </header>
 
-    <div class="center-container"> 
+    <main>
         <table>
             <caption>
                 <h2>Módulos</h2>
@@ -50,11 +49,16 @@
                 <td class="tdPro"><button>Proyecto intermodular</button></td>
             </tr>
         </table>
-    </div>
+    </main>
 
-    <div class="footer">
-        <h3>James Edward Nuñez Cuzcano</h3>
-    </div>
+    <footer>
+        <h2>James Edward Nuñez Cuzcano</h2>
+        <div>
+            <button class="active" onclick="window.open('https://github.com/JameseNunCuz')"><img
+                    src="./webresources/github.png"></button>
+            <button class="active"><img src="./webresources/home.png"></button>
+        </div>
+    </footer>
 </body>
 
 </html>
